--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   height: 100%;
   width: 100%;
+  background-color: rgba(255, 119, 65, 0.35);
 }
 
 .parent {
@@ -45,19 +46,19 @@
 .content {
   display: grid;
   grid-gap: 1rem;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   grid-auto-flow: column;
+  padding: 1rem;
 }
 
 #footer {
   padding: 2rem;
   display: grid;
-  grid-template-columns: 1fr 4fr 1fr;
   gap: 2rem;
   justify-content: center;
   height: fit-content;
-  background: lightsalmon;
+  background: rgb(255, 103, 42);
 }
 
 div .thy-btn {
@@ -104,13 +105,45 @@ div .thy-btn {
   font-weight: 700;
 }
 
+.try {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+}
+
+#content {
+  padding: 2rem;
+  display: grid;
+  justify-content: center;
+  height: fit-content;
+  background: lightcoral;
+  font-size: 1.25rem;
+}
+
+.center {
+  font-size: 1.5rem;
+  border: 2px solid black;
+  padding: 2rem;
+  text-align: center;
+}
+
 a {
   text-decoration: none;
   cursor: pointer;
 }
 
-.try {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+a:visited {
+  color: white;
+}
+
+strong {
+  color: white;
+}
+
+.image:hover {
+  transform: scale(1.075);
+  -webkit-transform: scale(1.075);
+  -moz-transform: scale(1.075);
+  -ms-transform: scale(1.075);
+  -o-transform: scale(1.075);
 }
